infra/k8s/landing/service.yml
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: wafizo
spec:
  selector:
    app: landing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
