infra/k8s/landing/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing
  namespace: wafizo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - wafizo.fr
        - www.wafizo.fr
        - wafizo.com
        - www.wafizo.com
      secretName: wafizo-fr-tls
  rules:
    - host: wafizo.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
    - host: www.wafizo.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
    - host: wafizo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
    - host: www.wafizo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
